load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(
    "@rules_flutter//flutter:defs.bzl",
    "dart_format_test",
    "flutter_analyze_test",
    "flutter_app",
    "flutter_build_settings",
    "flutter_goldens",
    "flutter_library",
    "flutter_test",
)
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

flutter_library(
    name = "lib",
    srcs = [
        "dart_test.yaml",
        "lib/main.dart",
    ],
    data = glob(["l10n/**"]),
    generated_srcs = {
        # Mounted at lib/generated/<proto import path>.pb.dart, so main.dart
        # imports package:hello_world/generated/api/v1/service.pb.dart.
        "//protos/api/v1:services_api_v1_proto_dart": "lib/generated",
    },
    generator_commands = ["intl_utils:generate"],
    pubspec = "pubspec.yaml",
    deps = [
        "@flutter_sdk//flutter/packages/flutter",
        "@flutter_sdk//flutter/packages/flutter_localizations",
        "@flutter_sdk//flutter/packages/flutter_test",
        "@pub_fixnum//:fixnum",
        "@pub_flutter_lints//:flutter_lints",
        "@pub_intl_utils//:intl_utils",
        "@pub_protobuf//:protobuf",
        "@pub_vector_math//:vector_math",
    ],
)

# Flutter tests in the same directory as pubspec.yaml
flutter_test(
    name = "lib_test",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

# Sharded variant: with only two test files under test/, three shards leave
# shard 2 empty — exercising the runner's deterministic partition, the
# TEST_SHARD_STATUS_FILE acknowledgement, and the empty-shard pass path.
flutter_test(
    name = "lib_test_sharded",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    jobs = 1,
    shard_count = 3,
)

# Pin the pub-cache materialization modes at runtime: the default target above
# covers `auto` (hardlink with copy fallback); these cover the forced byte
# copy and the zero-copy read-only reference.
flutter_test(
    name = "lib_test_copy_cache",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    pub_cache_materialization = "copy",
)

flutter_test(
    name = "lib_test_reference_cache",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    pub_cache_materialization = "reference",
)

flutter_analyze_test(
    name = "lib_analyze",
    srcs = glob(["test/**"]),
    embed = [":lib"],
)

# Regenerates golden images hermetically (protos mounted; no source-tree
# refresh needed) and writes them back on `bazel run`. Building it runs the
# golden-tagged tests with --update-goldens; a cache hit re-renders nothing.
flutter_goldens(
    name = "update_goldens",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

dart_format_test(
    name = "lib_format",
    srcs = glob(
        [
            "lib/**/*.dart",
            "test/**/*.dart",
        ],
        # intl_utils generated sources are not present in the source tree.
        exclude = ["lib/generated/**"],
    ),
)

# Flutter app in the same directory as pubspec.yaml. The web platform uses a
# dict spec to exercise dart_defines and extra build args end to end.
flutter_app(
    name = "app",
    dart_defines = {"SMOKE_DEFINE": "smoke-define-e2e-value"},
    embed = [":lib"],
    visibility = ["//visibility:public"],
    web = {
        "srcs": [":web_files"],
        "build_args": ["--source-maps"],
    },
)

build_test(
    name = "app_build_test",
    targets = [
        ":app.dev",
        ":app.web",
        # Building the goldens target runs the hermetic FlutterUpdateGoldens
        # action (compile + render + capture), validating golden regeneration
        # on CI without writing to the source tree.
        ":update_goldens",
        # Write-back helpers emitted by the flutter_library macro.
        ":lib.format",
        ":lib.sync",
        # Build settings emitted by flutter_build_settings.
        ":settings_mode",
        ":settings_build_number",
    ],
)

# Mobile examples. These are declared non-hermetic and need host
# prerequisites — an Android SDK discovered via ANDROID_HOME (see .bazelrc)
# for apk, and Xcode + CocoaPods on macOS for ios — so they are tagged
# manual and excluded from CI. Run them locally with e.g.:
#   ANDROID_HOME=~/Library/Android/sdk bazel build //flutter_app:mobile.apk
#   bazel build //flutter_app:mobile.ios
# Command-line build settings (mode + build number) for the mobile release
# flow: build with --//flutter_app:settings_mode=release
# --//flutter_app:settings_build_number=<n>.
flutter_build_settings(
    name = "settings",
    mode_default = "debug",
)

flutter_app(
    name = "mobile",
    apk = {
        "srcs": [":android_files"],
        "mode": select({
            ":settings_release": "release",
            "//conditions:default": "debug",
        }),
        "build_number": ":settings_build_number",
        "android_sdk": "@androidsdk//:sdk_path",
    },
    embed = [":lib"],
    ios = {
        "srcs": [":ios_files"],
    },
    tags = ["manual"],
)

filegroup(
    name = "android_files",
    srcs = glob(
        ["android/**"],
        exclude = [
            "android/**/build/**",
            "android/.gradle/**",
            "android/local.properties",
        ],
    ),
)

filegroup(
    name = "ios_files",
    srcs = glob(
        ["ios/**"],
        exclude = [
            "ios/Flutter/ephemeral/**",
            "ios/Flutter/Generated.xcconfig",
            "ios/Flutter/flutter_export_environment.sh",
            "ios/Pods/**",
            "ios/.symlinks/**",
        ],
    ),
)

sh_test(
    name = "web_build_args_test",
    srcs = ["web_build_args_test.sh"],
    data = [":app.web"],
)

build_test(
    name = "build_runner_mode_targets_test",
    targets = [
        ":lib.build_runner_build",
        ":lib.build_runner_test",
        ":lib.build_runner_watch",
        ":lib.build_runner_serve",
    ],
)

command(
    name = "build_runner_build_cmd",
    command = ":lib.build_runner_build",
)

command(
    name = "build_runner_test_cmd",
    command = ":lib.build_runner_test",
)

command(
    name = "build_runner_watch_cmd",
    command = ":lib.build_runner_watch",
)

command(
    name = "build_runner_serve_cmd",
    command = ":lib.build_runner_serve",
)

multirun(
    name = "build_runner_dev",
    commands = [
        ":build_runner_watch_cmd",
        ":build_runner_serve_cmd",
    ],
    jobs = 0,
)

multirun(
    name = "build_runner_verify",
    commands = [
        ":build_runner_build_cmd",
        ":build_runner_test_cmd",
    ],
)

build_test(
    name = "build_runner_multirun_target_test",
    targets = [
        ":build_runner_dev",
        ":build_runner_verify",
    ],
)

filegroup(
    name = "web_files",
    srcs = glob(["web/**"]),
)
