load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_app")

# Flutter app in the same directory as pubspec.yaml
flutter_app(
    name = "multiplatform_web",
    srcs = glob(["**/*"]),
    target = "web",
    visibility = ["//visibility:public"],
)

# TODO: Enable APK builds once Android SDK is set up in CI
# flutter_app(
#     name = "multiplatform_apk",
#     srcs = glob(["**/*"]),
#     target = "apk",
#     visibility = ["//visibility:public"],
# )

# Test that the apps build successfully
build_test(
    name = "multiplatform_build_test",
    targets = [
        ":multiplatform_web",
        # Note: APK builds require Android SDK setup, so commented out for now
        # ":multiplatform_apk",
    ],
)
