load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_app", "flutter_library")

flutter_library(
    name = "lib",
    srcs = ["lib/main.dart"],
    pubspec = "pubspec.yaml",
)

# Flutter app in the same directory as pubspec.yaml
flutter_app(
    name = "multiplatform_web",
    embed = [":lib"],
    target = "web",
    visibility = ["//visibility:public"],
)

# TODO: Enable APK builds once Android SDK is set up in CI
# flutter_app(
#     name = "multiplatform_apk",
#     embed = [":lib"],
#     target = "apk",
#     visibility = ["//visibility:public"],
# )

# Test that the apps build successfully
build_test(
    name = "multiplatform_build_test",
    targets = [
        ":multiplatform_web",
        # Note: APK builds require Android SDK setup, so commented out for now
        # ":multiplatform_apk",
    ],
)
