load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_app", "flutter_library")

flutter_library(
    name = "lib",
    srcs = ["lib/main.dart"],
    pubspec = "pubspec.yaml",
)

# Flutter app in the same directory as pubspec.yaml
flutter_app(
    name = "multiplatform",
    embed = [":lib"],
    visibility = ["//visibility:public"],
    web = ":web_files",
)

# TODO: Enable APK builds once Android SDK is set up in CI by adding
# `apk = ":[apk_files]"` once assets are defined.

# Test that the apps build successfully
build_test(
    name = "multiplatform_build_test",
    targets = [
        ":multiplatform.web",
        # Note: APK builds require Android SDK setup, so commented out for now
        # ":multiplatform.apk",
    ],
)

filegroup(
    name = "web_files",
    srcs = glob(["web/**"]),
)
